# mac-cli

./: Cargo.toml  README.md
src/: bluetooth.rs  brightness.rs  main.rs  music.rs  volume.rs  weather.rs
