[package]
name = "mac-control"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mac"
path = "src/main.rs"

[dependencies]
core-foundation = "0.10"
core-graphics = "0.23"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1.0"

[build-dependencies]
