[package]
name = "mac-cli"
version = "0.1.0"
edition = "2024"
description = "A simple CLI tool to control your Mac (volume, brightness, Bluetooth, Apple Music, weather)"
license = "Apache-2.0"
repository = "https://github.com/joonho3020/mac-cli"
homepage = "https://github.com/joonho3020/mac-cli"
documentation = "https://docs.rs/mac-cli"
readme = "README.md"
keywords = ["macos", "cli", "brightness", "volume", "bluetooth"]
categories = ["command-line-utilities"]

[[bin]]
name = "mac"
path = "src/main.rs"

[dependencies]
core-foundation = "0.10"
core-graphics = "0.23"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1.0"

[build-dependencies]
